--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <!-- set viewport to device width to allow responsiveness -->
+    <!-- device responsiveness -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CDN -->
@@ -10,6 +10,9 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="styles/styles.css">
+
+    <!-- Custom Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
     <!-- jQuery -->
     <script src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
@@ -28,13 +31,16 @@
           <div class="col-md-6">
             <div id="map"></div>
           </div>
-          <div class="col-md-6">
+          <h1>Earthquakes from past week with magnitude over 4.5</h1>
+          <div class="col-md-6 scroll">
             <div id="info">
-              <h1>Earthquakes from the past week:</h1>
-              <!-- <p>M 4.2 - 1km ESE of Fontana, California / 123 hours ago </p> -->
             </div>
           </div>
         </div>
       </div>
+      <footer>
+        <p> Data updated every 15 minutes</p>
+      </footer>
+
   </body>
 </html>
